Fix horizontal overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 body {
     font-family: "Kumbh Sans", sans-serif;
     font-size: 1rem;
+    overflow-x: hidden;
 }
 
 .gallery {
